# pfc-export-elasticsearch

./: .gitignore  CHANGELOG.md  README.md  pfc_export_elasticsearch.py  pyproject.toml  requirements.txt
examples/: export_logs.sh  list_and_export_cloud.sh
tests/: test_export.py  test_integration_elasticsearch.py
