[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "pfc-export-elasticsearch"
version         = "0.1.0"
description     = "Export Elasticsearch indices to PFC cold-storage archives"
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.8"
dependencies    = ["elasticsearch>=7.12.0"]

[project.scripts]
pfc-export-elasticsearch = "pfc_export_elasticsearch:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
